syntax = "proto3";

package auth;

// 错误响应
message ErrorResponse {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse){}
  rpc Login(LoginRequest) returns (LoginResponse){}
  rpc RefreshTokens(RefreshTokensRequest) returns (RefreshTokensResponse){}
}

message TeamInfo {
  string id = 1;
  string name = 2;
  string description = 3;
}

message RegisterUser {
  string id = 1;
  string email = 2;
  string studentId = 3;
  string name = 4;
  string nickname = 5;
  string grade = 6;
  string role = 7;
  TeamInfo team = 8;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string student_id = 3;
  string nickname = 4;
  optional string name = 5;
}

message RegisterResponse {
  optional RegisterUser user = 1;
  optional ErrorResponse error = 2;
}

message LoginRequest {
  string studentId = 1;
  string password = 2;
}
message LoginResponse {
  optional RegisterUser user = 1;
  optional ErrorResponse error = 2;
}

message RefreshTokensRequest {
  string refresh_token = 1;
}
message RefreshTokensResponse {
  optional string refresh_token = 1;
  optional string access_token = 2;
  optional ErrorResponse error = 3;
}


service TeamService {
  rpc CreateTeam (CreateTeamRequest) returns (CreateTeamResponse) {};
  rpc GetTeams () returns (GetTeamsResponse) {};
  rpc GetTeam (GetTeamRequest) returns (GetTeamResponse) {}; 
  rpc UpdateTeam (UpdateTeamRequest) returns (UpdateTeamResponse) {}; 
  rpc DeleteTeam (DeleteTeamRequest) returns (DeleteTeamResponse) {};  
  rpc AddTeamMembers (AddTeamMembersRequest) returns(AddTeamMembersResponse) {};  
  rpc RemoveTeamMember (RemoveTeamMemberRequest) returns (RemoveTeamMemberResponse) {};  
  rpc MoveUserToAnotherTeam (MoveUserToAnotherTeamRequest) returns (MoveUserToAnotherTeamResponse) {};
  rpc TransferTeamOwnerShip (TransferTeamOwnerShipRequest) returns (TransferTeamOwnerShipResponse) {}
}

message CreateTeamRequest {}
message CreateTeamResponse {}

message GetTeamsResponse {}

message GetTeamRequest {}
message GetTeamResponse {}

message UpdateTeamRequest{}
message UpdateTeamResponse{}

message DeleteTeamRequest {}
message DeleteTeamResponse {}

message AddTeamMembersRequest {}
message AddTeamMembersResponse {}

message RemoveTeamMemberRequest {}
message RemoveTeamMemberResponse {}

message MoveUserToAnotherTeamRequest {}
message MoveUserToAnotherTeamResponse {}

message TransferTeamOwnerShipRequest {}
message TransferTeamOwnerShipResponse {}
